# cpp_typeof

./: CMakeLists.txt  README.md
include/typeof/: CMakeLists.txt  typeof.hpp
include/typeof/myboost/: config.hpp
include/typeof/myboost/config/: abi_prefix.hpp  abi_suffix.hpp  assert_cxx03.hpp  assert_cxx11.hpp  assert_cxx14.hpp  assert_cxx17.hpp  assert_cxx20.hpp  assert_cxx98.hpp  auto_link.hpp  header_deprecated.hpp  pragma_message.hpp  requires_threads.hpp  workaround.hpp
include/typeof/myboost/config/compiler/: clang.hpp  comeau.hpp  compaq_cxx.hpp  cray.hpp  greenhills.hpp  hp_acc.hpp  intel.hpp  kai.hpp  pgi.hpp  sgi_mipspro.hpp  visualc.hpp
include/typeof/myboost/config/detail/: select_compiler_config.hpp  select_platform_config.hpp  suffix.hpp
include/typeof/myboost/config/platform/: aix.hpp  beos.hpp  bsd.hpp  cray.hpp  cygwin.hpp  haiku.hpp  hpux.hpp  irix.hpp  linux.hpp  macos.hpp  qnxnto.hpp  solaris.hpp  symbian.hpp  vxworks.hpp  wasm.hpp
include/typeof/myboost/config/stdlib/: dinkumware.hpp  libcomo.hpp  modena.hpp  msl.hpp  roguewave.hpp  sgi.hpp
include/typeof/myboost/core/: demangle.hpp
src/: sample.cpp
